--- a/EVA apps/EdurellVideoAnnotation/requirements.txt
+++ b/EVA apps/EdurellVideoAnnotation/requirements.txt
@@ -28,7 +28,7 @@ imageio-ffmpeg==0.4.2
 isodate==0.6.0
 jmespath==0.10.0
 keras-preprocessing==1.1.2
-keybert==0.2.0
+keybert==0.5.0
 #lecture-summarizer==0.0.1
 lexrank==0.1.0
 markdown==3.3.3
@@ -72,7 +72,7 @@ tensorflow-estimator==2.4.0
 termcolor==1.1.0
 theano==1.0.5
 thinc==7.4.5
-transformers==4.4.2
+#transformers==4.4.2
 unidecode==1.2.0
 uritools==3.0.0
 urlextract==1.2.0
@@ -81,12 +81,25 @@ wrapt==1.12.1
 wtforms==2.3.3
 youtube-dl
 youtube-transcript-api
-pymongo
+pymongo~=3.11.3
 pymongo[srv]
 email_validator
 flask_bootstrap
 flask_login
-bcrypt
+bcrypt~=3.2.0
 pytest
 python-rake
 python-igraph
+phrasemachine
+flask~=1.1.2
+werkzeug~=1.0.1
+nltk~=3.6
+requests~=2.25.1
+pandas~=1.1.5
+sparqlwrapper~=1.8.5
+networkx~=2.5.1
+pke~=1.8.1
+itsdangerous~=1.1.0
+wikipedia~=1.4.0
+numpy~=1.19.2
+Wikipedia-API
