--- a/EVA apps/EdurellVideoAnnotation/requirements.txt
+++ b/EVA apps/EdurellVideoAnnotation/requirements.txt
@@ -52,8 +52,9 @@ pycountry==20.7.3
 pyld==2.0.3
 pysrt==1.1.2
 pytorch-pretrained-bert==0.6.2
-rdflib==5.0.0
-rdflib-jsonld==0.5.0
+rdflib==6.1.1
+#rdflib==5.0.0
+#rdflib-jsonld==0.5.0
 requests-oauthlib==1.3.0
 rsa==4.6
 s3transfer==0.3.3
