--- a/EVA apps/EdurellVideoAugmentation/src/flask-server/requirements.txt
+++ b/EVA apps/EdurellVideoAugmentation/src/flask-server/requirements.txt
@@ -5,7 +5,8 @@ PyJWT==2.1.0
 bcrypt==3.2.0
 flask-mongoengine==1.0.0
 Flask-Mail==0.9.1
-urllib3==1.24.2
+urllib3
+#urllib3==1.24.2  
 json5==0.8.5
 rdflib==5.0.0
 PyLD==2.0.3
