--- a/EVA apps/EdurellVideoAnnotation/requirements.txt
+++ b/EVA apps/EdurellVideoAnnotation/requirements.txt
@@ -54,6 +54,7 @@ pysrt==1.1.2
 pytorch-pretrained-bert==0.6.2
 rdflib==6.1.1
 #rdflib==5.0.0
+rdflib-jsonld==0.6.2
 #rdflib-jsonld==0.5.0
 requests-oauthlib==1.3.0
 rsa==4.6
