--- a/EVA_apps/EdurellVideoAnnotation/requirements.txt
+++ b/EVA_apps/EdurellVideoAnnotation/requirements.txt
@@ -32,6 +32,7 @@ keybert==0.5.0
 #lecture-summarizer==0.0.1
 lexrank==0.1.0
 markdown==3.3.3
+markupsafe==2.0.1
 moviepy==1.0.3
 murmurhash==1.0.5
 oauthlib==3.1.0
