--- a/EVA_apps/EdurellVideoAnnotation/requirements.txt
+++ b/EVA_apps/EdurellVideoAnnotation/requirements.txt
@@ -98,7 +98,8 @@ flask~=1.1.2
 werkzeug~=1.0.1
 nltk~=3.6
 requests~=2.25.1
-pandas~=1.1.5
+pandas==1.3.0
+#pandas~=1.1.5
 sparqlwrapper~=1.8.5
 networkx~=2.5.1
 pke~=1.8.1
