--- a/EVA_apps/EdurellVideoAugmentation/src/react-app/package.json
+++ b/EVA_apps/EdurellVideoAugmentation/src/react-app/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.2",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@ramonak/react-progress-bar": "^3.1.0",
