implemented auto save graph after burst, separated process queue for videos segmentations, changed webpage names of things, manual annotator behaviour and fixed youtube video download

--- a/EVA_apps/EdurellVideoAnnotation/requirements.txt
+++ b/EVA_apps/EdurellVideoAnnotation/requirements.txt
@@ -110,5 +110,5 @@ werkzeug~=1.0.1
 wikipedia~=1.4.0
 wrapt==1.12.1
 wtforms==2.3.3
-# youtube-dl    switched to pytube since not working or downloading slow
+youtube-dl
 youtube-transcript-api
