--- a/EVA_apps/EdurellVideoAnnotation/requirements.txt
+++ b/EVA_apps/EdurellVideoAnnotation/requirements.txt
@@ -2,7 +2,7 @@ Wikipedia-API
 absl-py==0.11.0
 appdirs==1.4.4
 astunparse==1.6.3
-bcrypt~=3.2.0
+bcrypt==3.2.2
 bert-extractive-summarizer==0.5.1
 #bigfloat==0.4.0
 blis==0.7.4
@@ -15,12 +15,12 @@ conllu==4.4
 cymem==2.0.5
 cython==0.29.14
 docopt==0.6.2
-email_validator
+email_validator==2.0.0.post2
 #en-core-web-sm==2.3.1
 flask-wtf==0.14.3
-flask_bootstrap
-flask_login
-flask~=1.1.2
+flask_bootstrap==3.3.7.1
+flask_login==0.6.2
+flask==1.1.4
 flatbuffers==23.1.4
 frozendict==1.2
 gast==0.3.3
@@ -45,7 +45,7 @@ mediapipe==0.9.0.1
 moviepy==1.0.3
 murmurhash==1.0.5
 networkx~=2.5.1
-nltk~=3.6
+nltk==3.8.1
 numpy~=1.19.2
 oauthlib==3.1.0
 opencv-python==4.7.0.68
@@ -54,7 +54,7 @@ opt-einsum==3.3.0
 pandas==1.3.0
 #pandas~=1.1.5
 path-py==12.5.0
-phrasemachine
+phrasemachine==1.0.7
 pillow==9.3.0
 pke @ git+https://github.com/boudinfl/pke.git@aa7df17214252b6bab2f1988eba89fdce8050818
 pke~=1.8.1
@@ -68,13 +68,13 @@ pyasn1==0.4.8
 pycocotools==2.0.2
 pycountry==20.7.3
 pyld==2.0.3
-pymongo[srv]
-pymongo~=3.11.3
+#pymongo[srv]
+pymongo==3.11.4
 pysrt==1.1.2
 pytesseract==0.3.10
 pytest
-python-igraph
-python-rake
+python-igraph==0.10.4
+python-rake==1.5.0
 pytorch-pretrained-bert==0.6.2
 pytube
 #rdflib-jsonld==0.5.0
@@ -82,7 +82,7 @@ rdflib-jsonld==0.6.2
 #rdflib==5.0.0
 rdflib==6.1.1
 requests-oauthlib==1.3.0
-requests~=2.25.1
+requests==2.25.1
 rsa==4.6
 s3transfer==0.3.3
 sacremoses==0.0.43
@@ -91,7 +91,7 @@ sentencepiece==0.1.91
 sklearn==0.0
 smart-open==4.0.1
 spacy==2.3.5
-sparqlwrapper~=1.8.5
+sparqlwrapper==1.8.5
 speechrecognition==3.8.1
 srsly==1.0.5
 sumy==0.8.1
@@ -110,5 +110,6 @@ werkzeug~=1.0.1
 wikipedia~=1.4.0
 wrapt==1.12.1
 wtforms==2.3.3
+xgboost==1.5.1
 youtube-dl
 youtube-transcript-api
