--- a/EVA_apps/EdurellVideoAnnotation/requirements.txt
+++ b/EVA_apps/EdurellVideoAnnotation/requirements.txt
@@ -50,7 +50,7 @@ numpy~=1.19.2
 oauthlib==3.1.0
 opencv-python==4.7.0.68
 opt-einsum==3.3.0
-#pafy==0.5.5
+pafy==0.5.5
 pandas==1.3.0
 #pandas~=1.1.5
 path-py==12.5.0
