--- a/EVA_apps/EdurellVideoAnnotation/requirements.txt
+++ b/EVA_apps/EdurellVideoAnnotation/requirements.txt
@@ -17,6 +17,7 @@ cython==0.29.14
 docopt==0.6.2
 email_validator==2.0.0.post2
 #en-core-web-sm==2.3.1
+ffmpeg-python==0.2.0
 flask-wtf==0.14.3
 flask_bootstrap==3.3.7.1
 flask_login==0.6.2
@@ -57,6 +58,7 @@ path-py==12.5.0
 phrasemachine==1.0.7
 pillow==9.3.0
 pke @ git+https://github.com/boudinfl/pke.git@aa7df17214252b6bab2f1988eba89fdce8050818
+https://github.com/yt-dlp/yt-dlp/archive/master.tar.gz
 pke~=1.8.1
 plac==1.1.3
 preshed==3.0.5
