--- a/EVA_apps/EdurellVideoAugmentation/src/react-app/package.json
+++ b/EVA_apps/EdurellVideoAugmentation/src/react-app/package.json
@@ -17,6 +17,12 @@
     "@testing-library/user-event": "^12.8.3",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
+    "@visx/gradient": "^3.0.0",
+    "@visx/group": "^3.0.0",
+    "@visx/hierarchy": "^3.0.0",
+    "@visx/network": "^3.0.0",
+    "@visx/responsive": "^3.0.0",
+    "@visx/shape": "^3.0.0",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
@@ -26,6 +32,7 @@
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "chart.js": "^3.9.1",
     "chokidar": "^3.5.3",
     "css-loader": "4.3.0",
     "dotenv": "8.2.0",
@@ -60,9 +67,11 @@
     "react": "^18.2.0",
     "react-activity": "^1.2.2",
     "react-app-polyfill": "^2.0.0",
+    "react-chartjs-2": "^4.3.1",
     "react-d3-library": "^1.1.8",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-graph-vis": "^1.0.7",
     "react-icons": "^4.2.0",
     "react-native-web": "^0.15.0",
