--- a/EVA_apps/EdurellVideoAugmentation/src/react-app/package.json
+++ b/EVA_apps/EdurellVideoAugmentation/src/react-app/package.json
@@ -78,6 +78,7 @@
     "react-player": "^2.9.0",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
+    "reactflow": "^11.7.2",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "rodal": "^1.8.1",
