--- a/EVA_apps/EdurellVideoAugmentation/src/react-app/package.json
+++ b/EVA_apps/EdurellVideoAugmentation/src/react-app/package.json
@@ -35,6 +35,7 @@
     "chart.js": "^3.9.1",
     "chokidar": "^3.5.3",
     "css-loader": "4.3.0",
+    "dagre": "^0.8.5",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^7.11.0",
