quasi risolto bug flowchart

--- a/EVA_apps/EdurellVideoAugmentation/src/react-app/package.json
+++ b/EVA_apps/EdurellVideoAugmentation/src/react-app/package.json
@@ -38,6 +38,7 @@
     "dagre": "^0.8.5",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "elkjs": "^0.8.2",
     "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -91,6 +92,7 @@
     "url-loader": "4.1.1",
     "video-react": "^0.14.1",
     "web-vitals": "^1.1.1",
+    "web-worker": "^1.2.0",
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.1",
     "webpack-manifest-plugin": "2.2.0",
