--- a/EVA_apps/EdurellVideoAugmentation/src/react-app/package.json
+++ b/EVA_apps/EdurellVideoAugmentation/src/react-app/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.2",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.11",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@ramonak/react-progress-bar": "^3.1.0",
     "@svgr/webpack": "5.5.0",
@@ -13,6 +17,12 @@
     "@testing-library/user-event": "^12.8.3",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
+    "@visx/gradient": "^3.0.0",
+    "@visx/group": "^3.0.0",
+    "@visx/hierarchy": "^3.0.0",
+    "@visx/network": "^3.0.0",
+    "@visx/responsive": "^3.0.0",
+    "@visx/shape": "^3.0.0",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
@@ -22,10 +32,13 @@
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "chart.js": "^3.9.1",
     "chokidar": "^3.5.3",
     "css-loader": "4.3.0",
+    "dagre": "^0.8.5",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "elkjs": "^0.8.2",
     "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -46,6 +59,7 @@
     "jest-watch-typeahead": "0.6.1",
     "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
+    "patternomaly": "^1.3.2",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
@@ -53,18 +67,21 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "prompts": "2.4.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-activity": "^1.2.2",
     "react-app-polyfill": "^2.0.0",
+    "react-chartjs-2": "^4.3.1",
     "react-d3-library": "^1.1.8",
     "react-dev-utils": "^11.0.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-graph-vis": "^1.0.7",
     "react-icons": "^4.2.0",
     "react-native-web": "^0.15.0",
     "react-player": "^2.9.0",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
+    "reactflow": "^11.7.2",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "rodal": "^1.8.1",
@@ -76,6 +93,7 @@
     "url-loader": "4.1.1",
     "video-react": "^0.14.1",
     "web-vitals": "^1.1.1",
+    "web-worker": "^1.2.0",
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.1",
     "webpack-manifest-plugin": "2.2.0",
